Primer intento de segundo juego en pagina

--- a/WEB/views/profile.ejs
+++ b/WEB/views/profile.ejs
@@ -51,6 +51,11 @@
                 </a>
               </div>
               <div class="col-3">
+                <a href="gameCasas">
+                  <img class="icon" alt="icon" src="resources/img/gameB.png">
+                </a>
+              </div>
+              <div class="col-3">
                 <a href="logout">
                   <img class="icon" alt="icon" src="resources/img/logoutB.png">
                 </a>
