--- a/WEB/views/stats.ejs
+++ b/WEB/views/stats.ejs
@@ -4,44 +4,83 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estadísticas | CEMEX</title>
-    <link href="resources/css/estadisticas.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/estadisticas2.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" href="resources/img/logo2.png" type="image/icon type">
+    <link rel="icon" href="/Imágenes/logo2.png" type="image/icon type">
   </head>
   
   <body class="estadisticas">
     <div class="container-fluid p-3 header">
       <div class="row">
         <div class="col">
-          <a href="stats">
-            <img id="logo" alt="logo" src="resources/img/logo.png">
+          <a href="/estadisticas">
+            <img id="logo" alt="logo" src="/Imágenes/logo.png">
           </a>
         </div>
         <div class="col d-flex justify-content-end">
           <div class="row">
             <div class="col">
-              <a href="profile">
-                <img class="icon" alt="icon" src="resources/img/perfil.png">
+              <a href="/perfiladmin">
+                <img class="icon" alt="icon" src="/Imágenes/perfil.png">
               </a>
             </div>
             <div class="col">
-              <a href="game">
-                <img class="icon"id="game" alt="icon" src="resources/img/game.jpeg">
+              <a href="/videojuegoadmin">
+                <img class="icon"id="game" alt="icon" src="/Imágenes/game.png">
               </a>
             </div>
             <div class="col">
-              <a href="logout">
-                <img class="icon" alt="icon" src="resources/img/logout.png">
+              <a href="/">
+                <img class="icon" alt="icon" src="/Imágenes/logout.png">
               </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <br><br><br>
-    <div class="text-center">
-      <img class="img-fluid" alt="icon" src="resources/img/stats.jpeg">
+    <div class="container-fluid p-3 h-100 body">
+      <div class="row title p-3">
+        <p class="text-center fs-1"> Estadísticas </p>
+      </div>
+      <div class="row content p-4">
+        <div class="col card mx-5 my-2">
+          <div class="card-body txt">
+            <p class="text-center card-text">Historias acumuladas:</p>
+          </div>
+          <div class="card-body num">
+            <p class="text-center card-text fs-1">10</p>
+          </div>
+        </div>
+        <div class="col card mx-5 my-2">
+          <div class="card-body txt">
+            <p class="text-center card-text">Dinero acumulado:</p>
+          </div>
+          <div class="card-body num">
+            <p class="text-center card-text fs-1">10</p>
+          </div>
+        </div>
+      </div>
+      <div class="row content p-4">
+        <div class="col card mx-5 my-2">
+          <div class="card-body txt">
+            <p class="text-center card-text"> Rango:</p>
+          </div>
+          <div class="card-body num">
+            <p class="text-center card-text fs-1">10</p>
+          </div>
+        </div>
+        <div class="col card mx-5 my-2">
+          <div class="card-body txt">
+            <p class="text-center card-text"> Dinero Actual:</p>
+          </div>
+          <div class="card-body num">
+            <p class="text-center card-text fs-1">10</p>
+          </div>
+        </div>
+        
+      </div>
     </div>
+    <div
     
     <div class="footer fixed-bottom">
       <span class="position-absolute top-50 start-50 translate-middle">©2022 CEMEX S.A.B de C.V</span>
