--- a/WEB/casas/TemplateData/style.css
+++ b/WEB/casas/TemplateData/style.css
@@ -14,3 +14,43 @@ body { padding: 0; margin: 0 }
 #unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
 #unity-fullscreen-button { float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
+
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0%;
+  }
+  
+  .header{
+    background-color: #ffff;
+    border-bottom: 1px solid #272857;
+  }
+  
+  #logo{
+    width: 105px;
+    height: 30px;
+    cursor: pointer;
+  }
+  
+  .icon{
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+  }
+  
+  .game{
+    background-color: #bcbcbc;
+  }
+  
+  .footer{
+    background-color: #272857;
+    height: 7%;
+  }
+  
+  .footer>span{
+    font-family: roboto-regular,sans-serif;
+    font-size: .75rem;
+    line-height: 1.25rem;
+    letter-spacing: .0125rem;
+    color: #ffffff;
+  }
