--- a/WEB/views/profile.ejs
+++ b/WEB/views/profile.ejs
@@ -3,11 +3,11 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <title>Perfil | CEMEX</title>
     <link href="resources/css/perfil.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" href="resources/img/logo2.png" type="image/icon type">
+    <link rel="icon" href="resources/img/logo2.png" type="image/icon type">    
     <script>
       window.onload = function() {
         try {
@@ -52,7 +52,7 @@
               </div>
               <div class="col-3">
                 <a href="gameCasas">
-                  <img class="icon" alt="icon" src="resources/img/gameB.png">
+                  <img class="icon" alt="icon" src="resources/img/casa.png">
                 </a>
               </div>
               <div class="col-3">
@@ -79,7 +79,7 @@
       </div>
     </div>
     <br>
-    
+
     <div class="container-fluid text-center logros">
       <div class="row gy-3">
         <div class="col-6 col-md-3">
