--- a/WEB/views/profile.ejs
+++ b/WEB/views/profile.ejs
@@ -37,7 +37,7 @@
             <div class="row">
               <div class="col-12 d-flex justify-content-end">
                 <a href="stats">
-                  <img id="logoBlanco" alt="logo" src="resources/img/logo_blanco.png">
+                  <img id="logo" alt="logo" src="resources/img/logo_blanco.png">
                 </a>
               </div>
               <div class="col-3 offset-3">
