--- a/WEB/public/css/estadisticas.css
+++ b/WEB/public/css/estadisticas.css
@@ -4,13 +4,15 @@ html, body {
   margin: 0%;
 }
 
-.estadisticas{
-  background-color: #2b2b2bff;
-}
 
 .header{
   background-color: #ffff;
+  border-bottom: 1px solid #272857
   padding: 10px;
+}
+
+.body{
+  background-color: #f7f9fc;
 }
 
 #logo{
@@ -37,3 +39,8 @@ html, body {
   letter-spacing: .0125rem;
   color: #ffffff;
 }
+
+/* * { 
+  outline: 1px solid red;
+  outline-offset: -1px;
+} */
