--- a/WEB/views/stats.ejs
+++ b/WEB/views/stats.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estadísticas | CEMEX</title>
-    <link href="/css/estadisticas2.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/estadisticas.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="/Imágenes/logo2.png" type="image/icon type">
   </head>
