--- a/WEB/public/css/estadisticas.css
+++ b/WEB/public/css/estadisticas.css
@@ -7,7 +7,7 @@ html, body {
 
 .header{
   background-color: #ffff;
-  border-bottom: 1px solid #272857
+  border-bottom: 1px solid #272857;
   padding: 10px;
 }
 
