--- a/WEB/views/profile.ejs
+++ b/WEB/views/profile.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <title>Perfil | CEMEX</title>
     <link href="resources/css/perfil.css" rel="stylesheet" type="text/css"/>
+    <link href="resources/css/profileStyle.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="resources/img/logo2.png" type="image/icon type">    
     <script>
@@ -26,40 +27,73 @@
       <br>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-5 col-md-3 order-1 espacioFotoPerfil">
-            <img id="fotoPerfil" alt="foto" src="resources/img/foto_perfil.png">
-          </div>
+          <div id="contFot"class="col-5 col-md-3 order-1 espacioFotoPerfil profile-pic-div">
+            <!--<div class="profile-pic-div"> -->
+              <img id="fotoPerfil" alt="foto" src="resources/img/foto_perfil.png">
+              <input type="file" id="file">
+              <label for="file" id="uploadBtn">Choose Photo</label>
+            </div>
+            <script src="resources/js/pic.js"></script>
           <div class="col-12 col-md-5 order-3 order-md-2 ps-md-5 datosPersona">
             <p class="fs-1">Bienvenid@ <%= user %>! </p>
             <p class="fs-5">33 - Mty, NL - Practicante</p>
           </div>
-          <div class="col-7 col-md-4 order-2 order-md-3 d-flex justify-content-end">
-            <div class="row">
+          <div class="col-7 col-md-4 order-2 order-md-3 container justify-content-end">
+            <div class="row w-100">
+              <div class="col justify-content-end offset-8">
+                <a href="stats">
+                  <img id="logo" alt="logo" src="resources/img/logo.png">
+                </a>
+              </div>
+            </div>
+            <div class="row my-5">
+              <div class="col align-self-end">
+                <a href="stats">
+                  <img class="icon" alt="icon" src="resources/img/statistics.png">
+                </a>
+              </div>
+              <div class="col">
+                <a href="game">
+                  <img class="icon" alt="icon" src="resources/img/game.png">
+                </a>
+              </div>
+              <div class="col">
+                <a href="gameCasas">
+                  <img class="icon" alt="icon" src="resources/img/home.png">
+                </a>
+              </div>
+              <div class="col">
+                <a href="logout">
+                  <img class="icon" alt="icon" src="resources/img/logout.png">
+                </a>
+              </div>
+            </div>
+             <!-- <div class="row">
               <div class="col-12 d-flex justify-content-end">
                 <a href="stats">
-                  <img id="logo" alt="logo" src="resources/img/logo_blanco.png">
+                  <img id="logo" alt="logo" src="resources/img/logo.png">
                 </a>
               </div>
               <div class="col-3 offset-3">
                 <a href="stats">
-                  <img class="icon" alt="icon" src="resources/img/configB.png">
+                  <img class="icon" alt="icon" src="resources/img/statistics.png">
                 </a>
               </div>
               <div class="col-3">
                 <a href="game">
-                  <img class="icon" alt="icon" src="resources/img/gameB.png">
+                  <img class="icon" alt="icon" src="resources/img/game.png">
                 </a>
               </div>
               <div class="col-3">
                 <a href="gameCasas">
-                  <img class="icon" alt="icon" src="resources/img/casa.png">
+                  <img class="icon" alt="icon" src="resources/img/home.png">
                 </a>
               </div>
               <div class="col-3">
                 <a href="logout">
-                  <img class="icon" alt="icon" src="resources/img/logoutB.png">
+                  <img class="icon" alt="icon" src="resources/img/logout.png">
                 </a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
