--- a/WEB/views/stats.ejs
+++ b/WEB/views/stats.ejs
@@ -4,34 +4,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estadísticas | CEMEX</title>
-    <link href="/css/estadisticas.css" rel="stylesheet" type="text/css"/>
+    <link href="resources/css/estadisticas.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" href="/Imágenes/logo2.png" type="image/icon type">
+    <link rel="icon" href="resources/img/logo2.png" type="image/icon type">
   </head>
   
   <body class="estadisticas">
     <div class="container-fluid p-3 header">
       <div class="row">
         <div class="col">
-          <a href="/estadisticas">
-            <img id="logo" alt="logo" src="/Imágenes/logo.png">
+          <a href="/stats">
+            <img id="logo" alt="logo" src="resources/img/logo.png">
           </a>
         </div>
         <div class="col d-flex justify-content-end">
           <div class="row">
             <div class="col">
-              <a href="/perfiladmin">
-                <img class="icon" alt="icon" src="/Imágenes/perfil.png">
+              <a href="/profile">
+                <img class="icon" alt="icon" src="resources/img/perfil.png">
               </a>
             </div>
             <div class="col">
-              <a href="/videojuegoadmin">
-                <img class="icon"id="game" alt="icon" src="/Imágenes/game.png">
+              <a href="/game">
+                <img class="icon"id="game" alt="icon" src="resources/img/game.png">
               </a>
             </div>
             <div class="col">
               <a href="/">
-                <img class="icon" alt="icon" src="/Imágenes/logout.png">
+                <img class="icon" alt="icon" src="resources/img/logout.png">
               </a>
             </div>
           </div>
