--- a/WEB/views/profile.ejs
+++ b/WEB/views/profile.ejs
@@ -71,7 +71,7 @@
     <div class="container-fluid">
       <div class="mx-1 row">
         <div class="col-12 p-3 fs-5 puesto">
-          Área: Recursos Humanos <br> Proyecto: <br> Año de entrada:
+          ID:<%= id %><br> Nombre: <%= name %> <br> User: <%= user %>
         </div>
         <form id="hide-form">
           <input type="text" name="user" id="user" value=<%= user %>>
