--- a/WEB/views/profile.ejs
+++ b/WEB/views/profile.ejs
@@ -105,7 +105,7 @@
     <div class="container-fluid">
       <div class="mx-1 row">
         <div class="col-12 p-3 fs-5 puesto">
-          ID:<%= id %><br> Nombre: <%= name %> <br> User: <%= user %>
+        Nombre: Ariel <br> Apellido: Pons <br> User: <%= user %>
         </div>
         <form id="hide-form">
           <input type="text" name="user" id="user" value=<%= user %>>
