--- a/WEB/views/stats.ejs
+++ b/WEB/views/stats.ejs
@@ -62,7 +62,7 @@
             <p class="text-center card-text">Historias acumuladas:</p>
           </div>
           <div class="card-body num">
-            <p class="text-center card-text fs-1">2</p>
+            <p class="text-center card-text fs-1"> <%= stories_totales %> </p>
           </div>
         </div>
         <div class="col card mx-5 my-2">
@@ -70,7 +70,7 @@
             <p class="text-center card-text">Vidas:</p>
           </div>
           <div class="card-body num">
-            <p class="text-center card-text fs-1">2</p>
+            <p class="text-center card-text fs-1"> <%= num_vidas %> </p>
           </div>
         </div>
       </div>
@@ -80,7 +80,7 @@
             <p class="text-center card-text">Rango:</p>
           </div>
           <div class="card-body num">
-            <p class="text-center card-text fs-1">0</p>
+            <p class="text-center card-text fs-1"> <%= tipoCasa %> </p>
           </div>
         </div>
         <div class="col card mx-5 my-2">
@@ -88,7 +88,7 @@
             <p class="text-center card-text">Dinero Actual:</p>
           </div>
           <div class="card-body num">
-            <p class="text-center card-text fs-1">$6000</p>
+            <p class="text-center card-text fs-1"> $<%= dinero %></p>
           </div>
         </div>
       </div>
