Update of resources and game.ejs

--- a/WEB/views/game.ejs
+++ b/WEB/views/game.ejs
@@ -28,6 +28,16 @@
               </a>
             </div>
             <div class="col">
+              <a href="stats">
+                <img class="icon" alt="icon" src="resources/img/statistics.png">
+              </a>
+            </div>
+            <div class="col">
+              <a href="gameCasas">
+                <img class="icon" alt="icon" src="resources/img/home.png">
+              </a>
+            </div>
+            <div class="col">
               <a href="logout">
                 <img class="icon" alt="icon" src="resources/img/logout.png">
               </a>
