Update of button paths

--- a/WEB/views/profile.ejs
+++ b/WEB/views/profile.ejs
@@ -34,14 +34,14 @@
               <label for="file" id="uploadBtn">Choose Photo</label>
             </div>
             <script src="resources/js/pic.js"></script>
-          <div class="col-12 col-md-5 order-3 order-md-2 ps-md-5 datosPersona">
+          <div class="col-12 col-md-5 order-3 mx-2 order-md-2 ps-md-5 datosPersona">
             <p class="fs-1">Bienvenid@ <%= name %>! </p>
             <p class="fs-5">Monterrey, NL </p>
           </div>
-          <div class="col-7 col-md-4 order-2 order-md-3 container justify-content-end">
+          <div class="col-7 col-md-4 order-2 order-md-3 offset-1 container justify-content-end">
             <div class="row w-100">
               <div class="col justify-content-end offset-8">
-                <a href="stats">
+                <a href="game">
                   <img id="logo" alt="logo" src="resources/img/logo.png">
                 </a>
               </div>
