--- a/WEB/views/stats.ejs
+++ b/WEB/views/stats.ejs
@@ -22,7 +22,7 @@
     <div class="container-fluid p-3 header">
       <div class="row">
         <div class="col">
-          <a href="/stats">
+          <a href="/game">
             <img id="logo" alt="logo" src="resources/img/logo.png" />
           </a>
         </div>
@@ -41,6 +41,11 @@
                   alt="icon"
                   src="resources/img/game.png"
                 />
+              </a>
+            </div>
+            <div class="col">
+              <a href="gameCasas">
+                <img class="icon" alt="icon" src="resources/img/home.png">
               </a>
             </div>
             <div class="col">
