--- a/WEB/public/css/estadisticas.css
+++ b/WEB/public/css/estadisticas.css
@@ -4,6 +4,13 @@ html, body {
   margin: 0%;
 }
 
+p{
+  font-family: 'Roboto', sans-serif;
+}
+
+.card-text{
+  font-size: 1.5rem;
+}
 
 .header{
   background-color: #ffff;
