--- a/WEB/views/profile.ejs
+++ b/WEB/views/profile.ejs
@@ -8,7 +8,12 @@
     <link href="resources/css/perfil.css" rel="stylesheet" type="text/css"/>
     <link href="resources/css/profileStyle.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" href="resources/img/logo2.png" type="image/icon type">    
+    <link rel="icon" href="resources/img/logo2.png" type="image/icon type">  
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
     <script>
       window.onload = function() {
         try {
