--- a/WEB/views/stats.ejs
+++ b/WEB/views/stats.ejs
@@ -16,6 +16,10 @@
       crossorigin="anonymous"
     />
     <link rel="icon" href="resources/img/logo2.png" type="image/icon type" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
 
   <body class="estadisticas">
